[gd_scene load_steps=6 format=3 uid="uid://2ub6scsfkxtl"]

[ext_resource type="Theme" uid="uid://ba0rnmow03dw7" path="res://Assets/themes/text_main_dad.tres" id="1_c66p8"]
[ext_resource type="Script" path="res://Scripts/textMain.gd" id="1_fl4v4"]

[sub_resource type="Animation" id="Animation_6stfl"]
length = 0.001

[sub_resource type="Animation" id="Animation_sg3si"]
resource_name = "cursorWaggle"
length = 0.35
loop_mode = 2
step = 0.05

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7y3vy"]
_data = {
"RESET": SubResource("Animation_6stfl"),
"cursorWaggle": SubResource("Animation_sg3si")
}

[node name="textMain" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_c66p8")
script = ExtResource("1_fl4v4")

[node name="textMainPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 555.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_type_variation = &"mainPanel"

[node name="textMargin" type="MarginContainer" parent="textMainPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 32

[node name="textMainText" type="RichTextLabel" parent="textMainPanel/textMargin"]
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
text = "Good that they're feeding her too. If she worked up the nerve to eat the canned food she'd still only have enough for a few days. "

[node name="textAnim" type="AnimationPlayer" parent="textMainPanel"]
autoplay = "cursorWaggle"
libraries = {
"": SubResource("AnimationLibrary_7y3vy")
}

[node name="settingsButtons" type="HBoxContainer" parent="textMainPanel"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -33.0
offset_right = 16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 0

[node name="quit" type="Button" parent="textMainPanel/settingsButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"settingButton"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
action_mode = 0
text = "Quit"

[node name="textSpeaker" type="RichTextLabel" parent="."]
layout_mode = 1
offset_left = 100.0
offset_top = 485.0
offset_right = 100.0
offset_bottom = 485.0
mouse_filter = 1
theme_type_variation = &"speakerText"
bbcode_enabled = true
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="textListener" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 485.0
offset_right = -100.0
offset_bottom = 485.0
grow_horizontal = 0
theme_type_variation = &"speakerText"
bbcode_enabled = true
fit_content = true
autowrap_mode = 0

[connection signal="pressed" from="textMainPanel/settingsButtons/quit" to="." method="_on_quit_pressed"]
